fix(header): incorrect spacing in header-nav

--- a/projects/angular/src/layout/nav/_responsive-nav.clarity.scss
+++ b/projects/angular/src/layout/nav/_responsive-nav.clarity.scss
@@ -218,13 +218,6 @@
       .subnav.clr-nav-level-1,
       .sub-nav.clr-nav-level-1,
       .clr-vertical-nav.clr-nav-level-1 {
-        overflow-y: auto !important;
-        overflow-x: visible !important;
-
-        padding-top: 0px !important;
-        margin-top: 52px !important;
-        max-height: calc(100% - 52px) !important;
-
         @include sliding-nav-positioning();
         transform: translateX(calc(-1 * #{responsive-nav-variables.$clr-sliding-panel-width}));
         transition: responsive-nav-variables.$clr-sliding-panel-animation;
@@ -478,7 +471,12 @@
         .subnav.clr-nav-level-1,
         .sub-nav.clr-nav-level-1,
         .clr-vertical-nav.clr-nav-level-1 {
-          overflow: inherit;
+          overflow-y: auto;
+          overflow-x: visible;
+          padding-top: 32px;
+          margin-top: 52px;
+          max-height: calc(100% - 52px);
+
           width: responsive-nav-variables.$clr-sliding-panel-width;
           max-width: responsive-nav-variables.$clr-sliding-panel-width;
 
@@ -542,7 +540,6 @@
         .subnav.clr-nav-level-1,
         .sub-nav.clr-nav-level-1,
         .clr-vertical-nav.clr-nav-level-1 {
-          overflow: inherit;
           width: responsive-nav-variables.$clr-sliding-panel-width-sm;
           max-width: responsive-nav-variables.$clr-sliding-panel-width-sm;
         }
